Bug#43461: invalid comparison with string literal in default.c

Don't compare string literals as it results in unspecified behavior.